--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "author": "Tan",
   "license": "MIT",
+  "engines": {
+    "node": "14.20.1"
+  },
   "scripts": {
     "dev": "nodemon node ./index.js",
     "start": "node ./index.js"
